--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,6 +8,7 @@ h1, h4 {
 .content {
     margin: 0 auto;
     width: 100%;
+    text-align: center;
 }
 
 table, td, th {
@@ -41,4 +42,5 @@ td {
 
 #content {
     width: 70%;
+
 }
